# boolenum

./: Cargo.toml  README.md
src/: lib.rs
tests/: test.rs
tests/ui/: bad-enum-with-data.rs  bad-enum-with-data.stderr  bad-extra-fields.rs  bad-extra-fields.stderr  bad-field-names.rs  bad-field-names.stderr  bad-struct.rs  bad-struct.stderr  good-basic.rs  good-explicit-values.rs  good-truefalse.rs
